--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "dropdown-picker-rn": "^1.0.1",
     "expo": "~43.0.2",
+    "expo-asset": "~8.4.3",
+    "expo-camera": "~12.0.3",
+    "expo-file-system": "~13.0.3",
+    "expo-location": "~13.0.4",
+    "expo-media-library": "~13.0.3",
+    "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "moment": "^2.29.1",
+    "picker-modal": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-pager-view": "5.4.6",
+    "react-native-picker-modal-view": "^1.3.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "0.17.1",
+    "translate-google-api": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
