add secret file

--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       "package": "com.juntiapp.v2",
       "versionCode": 2
     },
-    "description": ""
+    "description": "All in one Apps",
+    "githubUrl": "https://github.com/juntiapps"
   }
 }
