--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-file-system": "~13.0.3",
     "expo-location": "~13.0.4",
     "expo-media-library": "~13.0.3",
+    "expo-secure-store": "~11.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "moment": "^2.29.1",
@@ -27,9 +28,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-pager-view": "5.4.6",
+    "react-native-paper": "^4.11.1",
     "react-native-picker-modal-view": "^1.3.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-slot-machine": "^0.3.2",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "translate-google-api": "^1.0.4"
