--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "dropdown-picker-rn": "^1.0.1",
-    "expo": "~43.0.2",
-    "expo-asset": "~8.4.3",
-    "expo-camera": "~12.0.3",
-    "expo-file-system": "~13.0.3",
-    "expo-location": "~13.0.4",
-    "expo-media-library": "~13.0.3",
-    "expo-secure-store": "~11.0.3",
-    "expo-sqlite": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^44.0.0",
+    "expo-asset": "~8.4.6",
+    "expo-camera": "~12.1.0",
+    "expo-file-system": "~13.1.2",
+    "expo-location": "~14.0.1",
+    "expo-media-library": "~14.0.0",
+    "expo-secure-store": "~11.1.0",
+    "expo-sqlite": "~10.1.0",
+    "expo-status-bar": "~1.2.0",
     "moment": "^2.29.1",
     "picker-modal": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-pager-view": "5.4.6",
+    "react-native-pager-view": "5.4.9",
     "react-native-paper": "^4.11.1",
     "react-native-picker-modal-view": "^1.3.2",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-screens": "~3.10.1",
     "react-native-slot-machine": "^0.3.2",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
